[package]
name = "grafeo-rag"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Graph-Augmented Retrieval via Engrams — schema-agnostic RAG for Grafeo"

[features]
default = ["cognitive"]

# Core retrieval (engram recall + spreading activation)
cognitive = [
    "grafeo-cognitive/engram",
    "grafeo-cognitive/hopfield",
    "grafeo-cognitive/energy",
    "grafeo-cognitive/synapse",
]

# Full cognitive (adds fabric scoring to ranking)
cognitive-full = [
    "cognitive",
    "grafeo-cognitive/cognitive-fabric",
]

[dependencies]
grafeo-common.workspace = true
grafeo-core = { workspace = true, default-features = false }
grafeo-cognitive = { workspace = true, default-features = false }

# Async
tokio = { version = "1", features = ["sync"] }
async-trait.workspace = true

# Error handling
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Tracing
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tempfile.workspace = true
grafeo = { workspace = true, features = ["embedded", "storage"] }

[[example]]
name = "rag_demo"
path = "examples/rag_demo.rs"

[lints]
workspace = true
