[package]
name = "obrain-rag"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Graph-Augmented Retrieval via Engrams — schema-agnostic RAG for Obrain"

[features]
default = ["cognitive"]

# Core retrieval (engram recall + spreading activation)
cognitive = [
    "obrain-cognitive/engram",
    "obrain-cognitive/hopfield",
    "obrain-cognitive/energy",
    "obrain-cognitive/synapse",
]

# Full cognitive (adds fabric scoring to ranking)
cognitive-full = [
    "cognitive",
    "obrain-cognitive/cognitive-fabric",
]

[dependencies]
obrain-common.workspace = true
obrain-core = { workspace = true, default-features = false }
obrain-cognitive = { workspace = true, default-features = false }

# Async
tokio = { version = "1", features = ["sync"] }
async-trait.workspace = true

# Error handling
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Tracing
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tempfile.workspace = true
obrain = { workspace = true, features = ["embedded", "storage"] }
obrain-substrate.workspace = true

[[example]]
name = "rag_demo"
path = "examples/rag_demo.rs"

[lints]
workspace = true
