[package]
name = "obrain-substrate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Topology-as-storage substrate: mmap + WAL + fixed-size Pod records + tiered embeddings"

[dependencies]
# Graph traits + shared ID/value types. Kept default-features-off so we don't
# pull in LpgStore's tree (rayon, tokio, mmap). The GraphStore trait surface
# only needs the core definitions.
obrain-common.workspace = true
obrain-core = { workspace = true, default-features = false }

# Error handling
thiserror.workspace = true

# Data layout — min_const_generics lets Pod/Zeroable derive for arrays > 32 elements.
bytemuck = { workspace = true, features = ["derive", "min_const_generics"] }

# Memory-mapped I/O
memmap2.workspace = true

# Hashing
crc32fast.workspace = true
foldhash.workspace = true
sha2.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
bincode = { workspace = true }

# Concurrency
parking_lot.workspace = true
dashmap.workspace = true
# Data parallelism for the tiered retrieval scan (T8 step 5).
# Optional dep: only the public retrieval API drags it in; the rest of
# the substrate stays single-threaded by construction.
rayon = { workspace = true }

# Collections (small-label inline storage, matches lpg::Node layout)
smallvec.workspace = true

# Observability
tracing.workspace = true

# Misc
arcstr.workspace = true
byteorder.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
rand.workspace = true
criterion.workspace = true
# Enable obrain-core's `regex` feature only for tests — the production dep
# above keeps `default-features = false`. Needed by the relocated
# `operators_filter` integration tests that exercise `BinaryFilterOp::Regex`
# and `BinaryFilterOp::Like` (T17 W4.p4).
obrain-core = { workspace = true, default-features = false, features = ["regex"] }
# Used only by the T11 Step 5 prefetch bench to read ru_minflt via
# getrusage. Already transitively present through sha2/cpufeatures —
# making it an explicit dev-dep keeps the bench self-contained.
libc = "0.2"

[[bench]]
name = "crud_micro"
harness = false

[[bench]]
name = "decay_all"
harness = false

[[bench]]
name = "hopfield_recall"
harness = false

[[bench]]
name = "tiered_scan"
harness = false

[[bench]]
name = "spreading_activation"
harness = false

[[bench]]
name = "ricci_batch"
harness = false

[[bench]]
name = "heat_step"
harness = false

[[bench]]
name = "forman_batch"
harness = false

[[bench]]
name = "hks_refresh"
harness = false

[[bench]]
name = "geodesic"
harness = false

[[bench]]
name = "effective_resistance"
harness = false

[features]
default = []
# Expose legacy read-only LpgStore ingestion (used only by the obrain-migrate binary).
legacy-reader = []
