[package]
name = "retrieval"
version = "0.1.0"
edition = "2024"

[dependencies]
llm-engine = { path = "../llm-engine" }
graph-schema = { path = "../graph-schema" }
kv-registry = { path = "../kv-registry" }
think-filter = { path = "../think-filter" }
persona = { path = "../persona" }
obrain-common = { path = "/Users/triviere/projects/lab/grafeo/crates/obrain-common" }
obrain-core = { path = "/Users/triviere/projects/lab/grafeo/crates/obrain-core" }
anyhow = "1"
tokio = { version = "1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
serde_json = "1"
