[package]
name = "grafeo-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Node.js/TypeScript bindings for Grafeo graph database"

[lib]
crate-type = ["cdylib"]
doc = false

[dependencies]
grafeo-engine = { path = "../../grafeo-engine" }
grafeo-core = { path = "../../grafeo-core" }
grafeo-common = { path = "../../grafeo-common" }
grafeo-adapters = { path = "../../grafeo-adapters" }

napi = { version = "3", default-features = false, features = ["napi9", "async", "serde-json", "error_anyhow"] }
napi-derive = "3.5.1"
parking_lot.workspace = true
thiserror.workspace = true
tokio.workspace = true
serde_json = "1.0"

[build-dependencies]
napi-build = "2"

[features]
default = ["full"]
gql = ["grafeo-engine/gql"]
cypher = ["grafeo-engine/cypher"]
sparql = ["grafeo-engine/sparql", "grafeo-engine/rdf"]
gremlin = ["grafeo-engine/gremlin"]
graphql = ["grafeo-engine/graphql"]
sql-pgq = ["grafeo-engine/sql-pgq"]
vector-index = ["grafeo-engine/vector-index"]
full = ["gql", "cypher", "sparql", "gremlin", "graphql", "sql-pgq", "vector-index"]

[lints]
workspace = true
